--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,15 @@ android {
 }
 
 dependencies {
-
+    //room
     def room_version = "2.3.0"
 
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    // To use Kotlin Symbolic Processing
-    // TODO activate ksp after finishing project
-    //ksp("androidx.room:room-compiler:$room_version")
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$room_version")
+    // To use Kotlin Symbolic Processing (KSP)
+    implementation("com.google.devtools.ksp:symbol-processing-api:1.5.10-1.0.0-beta02")
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:$room_version")
 
