--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.wagit.desktrack"
         minSdkVersion 21
@@ -45,6 +49,7 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.3.1"
     def room_version = "2.3.0"
     //def paging_version = "3.0.0"
 
@@ -60,6 +65,16 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
     //to include java standard language APIs for older Android versions
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
+    //lifecycle
+    implementation  "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    //kotlin coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
