--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -54,9 +55,14 @@ android {
 dependencies {
     def lifecycle_version = "2.3.1"
     def room_version = "2.3.0"
+    def nav_version = "2.3.5"
     //def paging_version = "3.0.0"
 
     //implementation("androidx.paging:paging-runtime:$paging_version")
+
+    //navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -81,9 +87,6 @@ dependencies {
 
     //fragment
     implementation 'androidx.fragment:fragment-ktx:1.3.4'
-    //navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     //dagger hilt
     implementation("com.google.dagger:hilt-android:$hilt_version")
