--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DeskTrack">
-        <activity android:name=".ui.view.activites.LoginActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+        <activity android:name=".ui.user.view.HomeActivity"/>
+        <activity
+            android:name=".ui.login.view.LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".ui.view.activites.HomeActivity">
-
         </activity>
     </application>
 
