--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity android:name=".ui.user.view.HomeActivity">
 
         </activity>
+        <activity android:name=".ui.admin.view.AdminActivity">
+
+        </activity>
     </application>
 
 </manifest>
