Improved the export data fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,7 @@ dependencies {
     implementation 'com.github.kizitonwose:CalendarView:1.0.4'
 
     //write pdf library -> Added in order to export the pdf file with the registers
-    implementation 'com.itextpdf:itextg:5.5.10'
+    //implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.itextpdf:itext7-core:7.1.11'
 
 }
